--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "test-watch": "export NODE_ENV=test && nodemon --exec \"npm test\"",
     "eslint-setup": "./node_modules/.bin/eslint --init"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ShawonAshraf/LocalFileServer.git"
-  },
+  "repository": "git+https://github.com/ShawonAshraf/LocalFileServer.git",
   "keywords": [
     "fileserver",
     "filesystem"
@@ -29,8 +26,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "express": "^4.16.3",
-    "hbs": "^4.0.1",
-    "morgan": "^1.9.0",
+    "hbs": "^4.0.4",
+    "morgan": "^1.9.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
